--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
   <div class="size">
   <address itemprop="address" class="contact-address">
     <strong itemprop="name">Radek Farny</strong><br>
-    <span>Bolšiny 44</span><br>
+    <span>Bolešiny 44</span><br>
     <span>Klatovy 33901</span><br>
   </address>
 
@@ -62,7 +62,7 @@
     (function(){
       // email parts
       var user = "radek.farny";
-      var domain = "sezam.cz";
+      var domain = "seznam.cz";
       var email = user + "@" + domain;
       var emailAnchor = '<a href="mailto:' + email + '" aria-label="Email ' + email + '">' + email + '</a>';
       document.getElementById('email-link').innerHTML = emailAnchor;
