--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="{{ page.title }}">
   <meta property="og:type" content="website">
-  <meta name="description" content="Radek Farny | revize plynových zařízení">
+  <meta name="description" content="Revize plynu Klatovy | Radek Farny">
   <meta name="keywords" content="{{ page.keywords | default: site.keywords }}">
   <meta name="google-site-verification" content="gm5ZhzpCwzgaKMeZ-Rxr_1Y_aLArxXl6SSKXEdQDGKo" />
 
