--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="{{ page.keywords | default: site.keywords }}">
   <meta name="google-site-verification" content="gm5ZhzpCwzgaKMeZ-Rxr_1Y_aLArxXl6SSKXEdQDGKo" />
 
-  <link rel="icon" href="{{ '/favicon.ico' | relative_url }}" type="image/x-icon">
+  <link rel="icon" href="{{ '/favicon.ico' | relative_url }}" type="image/x-icon" sizes="32x32">
   <link rel="stylesheet" href="{{ '/assets/normalize.css' | relative_url }}">
   <title>{{ page.title }}</title>
 </head>
