--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Revize plynu Klatovy | Radek Farny">
   <meta name="keywords" content="{{ page.keywords | default: site.keywords }}">
   <meta name="google-site-verification" content="gm5ZhzpCwzgaKMeZ-Rxr_1Y_aLArxXl6SSKXEdQDGKo" />
-
+  <meta name="seznam-wmt" content="yl8WznxabssNjQCtEEXuFmsNk31YESb1" />
   <link rel="icon" href="{{ '/favicon.ico' | relative_url }}" type="image/x-icon" sizes="32x32">
   <link rel="stylesheet" href="{{ '/assets/normalize.css' | relative_url }}">
   <title>{{ page.title }}</title>
@@ -16,7 +16,8 @@
 <body>
   <div class="section title">
     <div class="size">
-      <h1>Revize plynových zařízení</h1>
+      <h1 style="margin-bottom: 0;">Revize plynových zařízení Klatovy</h1>
+      <h2 style="margin-top: 5px;">tel. 724 067 268</h2>
     </div>
   </div>  
   <div class="section section-1">
